create CSS root variables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,28 @@
 /* Google Fonts Import */
 @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
 
+/* CSS Variables */
+
+:root {
+    --primary-font: "Parkinsans", sans-serif;
+    --primary-color:
+    --secondary-color: 
+    --tertiary-color:
+    --quarternary-color:
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* General Styles */
 /* body {
     font-family: 'Parkinsans', sans-serif;
