--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,13 @@
     --quarternary-color:
 }
 
+/* Global Styles */
+
+html, body * {
+    margin: 0;
+    padding: 0;
+    font-family: var(--primary-font);
+}
 
 
 
