--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,9 @@ html, body * {
     height: 100vh;   
 }
 
+/* Start Screen */
+
+
 /* Quiz Question Screen */
 
 .section h4 {
@@ -43,6 +46,13 @@ html, body * {
 
 #question {
     margin-top: 30px;
+}
+
+#timer {
+    border: 2px solid black;
+    width: 80%;
+    height: 25px;
+    margin-top: 15px;
 }
 
 #button-container {
@@ -74,7 +84,7 @@ html, body * {
 
 
 #quiz-question-container {
-    display: none;
+    display: ;
 }
 
 /* Results Screen */
@@ -92,22 +102,14 @@ html, body * {
 }
 
 #results-container {
-    display: none;
+    display: ;
 }
 
 
 
 
 /* General Styles */
-/* body {
-    font-family: 'Parkinsans', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-} */
+
 
 /* button style */
 /* .btn {
@@ -124,9 +126,6 @@ html, body * {
     border-radius: 0;
 } */
 
-#start-screen-container {
-    display: none;
-}
 /* Selection HTML */
 
 
