--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 
 /* Global Styles */
 
-html, body * {
+html, body {
     margin: 0;
     padding: 0;
     font-family: var(--primary-font);
@@ -42,7 +42,36 @@ h1 {
 
 #start-screen-container button {
     margin-top: 30px;
-    width: 200px;
+    width: 150px;
+    text-align: center;
+    border: 2px Solid Black;
+    font-size: 18px;
+}
+
+/* Quiz Parameters Screen */
+
+#quiz-parameters-container h2 {
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
+#quiz-parameters-container h3 {
+    margin-bottom: 30px;
+}
+
+#quiz-parameters-container select {
+    margin-bottom: 15px;
+    border: 2px solid black;
+    font-size: 20px;
+}
+
+#quiz-parameters-container select:focus {
+   box-shadow: none;
+}
+
+#parameter-start-button {
+    margin-top: 15px;
+    width: 150px;
     text-align: center;
     border: 2px Solid Black;
     font-size: 18px;
