--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,25 +5,37 @@
 
 :root {
     --primary-font: "Parkinsans", sans-serif;
-    --primary-color: ;
-    --secondary-color: ;
-    --tertiary-color: ;
-    --quarternary-color: ;
+    --primary-color: #132A13;
+    --secondary-color: #4F772D;
+    --tertiary-color: #ECF39E;
+    --quarternary-color: #31572C;
+    --color: #90A955;
 }
 
 /* Global Styles */
 
-html, body {
+html, 
+body {
     margin: 0;
     padding: 0;
     font-family: var(--primary-font);
+    background-color: var(--secondary-color);
+}
+
+h1,
+h2,
+h3, 
+h4,
+.card-title {
+    color: var(--primary-color);
 }
 
 .card {
     max-width: 600px; 
     width: 100%;
-    padding: 15px; 
-    border: 2px solid black;  
+    padding: 15px;
+    border: none;
+    background-color: var(--tertiary-color);
 }
 
 .section {
@@ -38,8 +50,9 @@ html, body {
 #next-button,
 #play-again-button {
     text-align: center;
-    border: 2px Solid Black;
+    border: none;
     font-size: 18px;
+    background-color: var(--quarternary-color);
 }
 
 
@@ -52,6 +65,7 @@ h1 {
 
 #start-screen-container button {
     margin-top: 30px;
+    padding: 10px 20px;
 }
 
 /* Quiz Parameters Screen */
@@ -67,8 +81,9 @@ h1 {
 
 #quiz-parameters-container select {
     margin-bottom: 15px;
-    border: 2px solid black;
+    border: none;
     font-size: 20px;
+    background-color: var(--color);
 }
 
 #quiz-parameters-container select:focus {
@@ -81,7 +96,7 @@ h1 {
 }
 
 #quiz-parameters-container {
-    display: ;
+    display: none;
 }
 
 /* Quiz Question Screen */
@@ -112,14 +127,10 @@ h1 {
 
 #button-container .btn {
     border-radius: 5px;
-    border: 2px solid black;
+    border: none;
     font-size: 20px;
     line-height: 25px;
-}
-
-#button-container .button:hover,
-#next-button:hover {
-    border: 2px solid black;
+    background-color: var(--color)
 }
 
 #next-button {
@@ -129,7 +140,7 @@ h1 {
 
 
 #quiz-question-container {
-    display: ;
+    display: none;
 }
 
 /* Results Screen */
@@ -144,5 +155,5 @@ h1 {
 }
 
 #results-container {
-    display: ;
+    display: none;
 }
