--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,9 +56,10 @@ strong {
 #start-screen-container button,
 #parameter-start-button,
 #next-button,
-#play-again-button {
+#play-again-button,
+#howToPlayModal button{
+    border: 4px solid transparent;
     text-align: center;
-    border: none;
     font-size: 18px;
     background-color: var(--quarternary-color);
     font-weight: 600;
@@ -66,6 +67,15 @@ strong {
 
 i {
     margin-right: 8px;
+}
+
+#start-screen-container button:hover,
+#parameter-start-button:hover,
+#next-button:hover,
+#play-again-button:hover,
+#howToPlayModal button:hover {
+    background-color: var(--tertiary-color);
+    border: 4px solid var(--quarternary-color);
 }
 
 /* Start Screen */
@@ -76,6 +86,10 @@ h1 {
 
 #start-screen-container button {
     padding: 10px 20px;
+}
+
+#howToPlayModal .modal-body {
+    background-color: var(--tertiary-color);
 }
 
 /* Quiz Parameters Screen */
@@ -90,10 +104,12 @@ h1 {
     font-size: 20px;
     background-color: var(--color);
     font-weight: 500;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    height: 50px;
 }
 
 #quiz-parameters-container select:focus {
-   box-shadow: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 #parameter-start-button {
@@ -107,10 +123,19 @@ h1 {
     font-weight: bold;
 }
 
-#timer {
-    border: 2px solid black;
+#timer-container {
+    border: 2px solid var(--secondary-color);
     width: 80%;
-    height: 25px;
+    height: 20px;
+    border-radius: 25px;
+    overflow: hidden;
+}
+
+#timer {
+    height: 100%;
+    width: 50%;
+    background-color: var(--secondary-color);
+    transition: width linear;
 }
 
 #button-container {
@@ -126,6 +151,15 @@ h1 {
     line-height: 25px;
     background-color: var(--color);
     font-weight: 500;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transform: perspective(100px) translateZ(0);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    height: 50px;
+}
+
+#button-container .btn:hover {
+    transform: perspective(100px) scale(1.003) translateZ(1px); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
 }
 
 #next-button {
@@ -134,7 +168,7 @@ h1 {
 
 /* Results Screen */
 
-#play-again-button {]
+#play-again-button {
     width: 200px;
 }
 
