link all relevant variables to javascript file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,9 @@ strong {
     font-size: 18px;
     background-color: var(--quarternary-color);
     font-weight: 600;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transform: perspective(100px) translateZ(0);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 i {
@@ -74,8 +77,8 @@ i {
 #next-button:hover,
 #play-again-button:hover,
 #howToPlayModal button:hover {
-    background-color: var(--tertiary-color);
-    border: 4px solid var(--quarternary-color);
+    transform: perspective(100px) scale(1.003) translateZ(1px); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
 }
 
 /* Start Screen */
@@ -135,7 +138,7 @@ h1 {
 
 #timer {
     height: 100%;
-    width: 50%;
+    width: 100%;
     background-color: var(--secondary-color);
     transition: width linear;
 }
@@ -162,6 +165,10 @@ h1 {
 #button-container .btn:hover {
     transform: perspective(100px) scale(1.003) translateZ(1px); 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
+}
+
+#button-container .btn:disabled {
+    opacity: 1;
 }
 
 #next-button {
