--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 
 /* Global Styles */
 
-html, 
+html,
 body {
     margin: 0;
     padding: 0;
@@ -34,12 +34,14 @@ strong {
 #quiz-question-container h2,
 #quiz-question-container h3,
 #quiz-parameters-container h3,
-#results-container h3  {
-    font-weight: 600;
+#results-container h3 {
+    font-weight: 650;
 }
 
 .card {
-    max-width: 600px; 
+    margin-top: 10px;
+    margin-bottom: 10px;
+    max-width: 600px;
     width: 100%;
     padding: 20px;
     border: none;
@@ -48,16 +50,16 @@ strong {
 
 .section {
     display: flex;
-    justify-content: center; 
-    align-items: center;    
-    height: 100vh;   
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 #start-screen-container button,
 #parameter-start-button,
 #next-button,
 #play-again-button,
-#howToPlayModal button{
+#howToPlayModal button {
     border: 4px solid transparent;
     text-align: center;
     font-size: 18px;
@@ -65,7 +67,7 @@ strong {
     font-weight: 600;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     transform: perspective(100px) translateZ(0);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 i {
@@ -77,8 +79,8 @@ i {
 #next-button:hover,
 #play-again-button:hover,
 #howToPlayModal button:hover {
-    transform: perspective(100px) scale(1.003) translateZ(1px); 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
+    transform: perspective(100px) scale(1.003) translateZ(1px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 /* Start Screen */
@@ -93,6 +95,10 @@ h1 {
 
 #howToPlayModal .modal-content {
     background-color: var(--tertiary-color);
+}
+
+#howToPlayModal .modal-body {
+    padding-bottom: 0;
 }
 
 .toast-body {
@@ -112,12 +118,12 @@ h1 {
     font-size: 20px;
     background-color: var(--color);
     font-weight: 500;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     height: 50px;
 }
 
 #quiz-parameters-container select:focus {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 #parameter-start-button {
@@ -147,12 +153,13 @@ h1 {
     background-color: var(--secondary-color);
     transition: width linear;
     font-weight: bold;
+    color: white;
 }
 
 #button-container {
     display: flex;
-    flex-direction: column; 
-    gap: 10px; 
+    flex-direction: column;
+    gap: 10px;
 }
 
 #button-container .btn {
@@ -161,16 +168,16 @@ h1 {
     font-size: 20px;
     line-height: 25px;
     background-color: var(--color);
-    font-weight: 500;
+    font-weight: 600;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     transform: perspective(100px) translateZ(0);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     min-height: 50px;
 }
 
 #button-container .btn:hover {
-    transform: perspective(100px) scale(1.003) translateZ(1px); 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
+    transform: perspective(100px) scale(1.003) translateZ(1px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 #button-container .btn:disabled {
@@ -195,3 +202,49 @@ div #logo {
     font-weight: bold;
 }
 
+/* small devices (mobile phones, 450px and below */
+@media screen and (max-width: 450px) {
+
+    #start-screen-container button,
+    #parameter-start-button,
+    #next-button,
+    #play-again-button,
+    #howToPlayModal button {
+        font-size: 12px;
+    }
+
+    #quiz-parameters-container select {
+        font-size: 16px;
+    }
+
+    #button-container .btn {
+        font-size: 16px;
+    }
+
+    #question {
+        font-size: 20px;
+    }
+
+    #progress-tracker {
+        font-size: 18px;
+    }
+
+    #timer {
+        font-size: 14px;
+    }
+}
+
+
+/* small devices (mobile phones, 620px and below */
+@media screen and (max-width: 620px) {
+    .card {
+        width: 95vw;
+    }
+}
+
+/* medium devices (tablets, 620px and up */
+@media screen and (min-width: 620px) {
+    .card {
+        width: 600px;
+    }
+}
