--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ body {
 h1,
 #quiz-parameters-container h2,
 #logo,
+#loading-screen h2,
 h4,
 strong {
     color: var(--primary-color);
@@ -34,6 +35,7 @@ strong {
 #quiz-question-container h2,
 #quiz-question-container h3,
 #quiz-parameters-container h3,
+#loading-screen h2,
 #results-container h3 {
     font-weight: 650;
 }
@@ -146,6 +148,14 @@ h1 {
 }
 
 /* Quiz Question Screen */
+
+#loading-screen {
+    display: none;
+}
+
+#loading-screen .card {
+    height: 400px;
+}
 
 .section h4 {
     font-size: 16px;
